Added sin, cos, tan, sqrt expression, and power operator support

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
       <button onclick="calculate()">=</button>
       <button onclick="appendValue('**')">^</button>
 
-      <button onclick="appendValue('Math.sqrt(')">√</button>
-      <button onclick="appendValue('Math.sin(')">sin</button>
-      <button onclick="appendValue('Math.cos(')">cos</button>
-      <button onclick="appendValue('Math.tan(')">tan</button>
+      <button onclick="appendValue('sin(')">sin</button>
+      <button onclick="appendValue('cos(')">cos</button>
+      <button onclick="appendValue('tan(')">tan</button>
+      <button onclick="appendValue('^')">^</button>
+      <button onclick="appendValue('√(')">√(</button>
+ 
 
       <button onclick="appendValue('Math.log10(')">log</button>
       <button onclick="appendValue('Math.PI')">π</button>
